argo/apps/media/vpn/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission-vpn
  namespace: media
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 9091
  selector:
     app: transmission-vpn
